--- a/Tyuiu.GrigorevKU.Sprint7.Project.V4/FormMain.resx
+++ b/Tyuiu.GrigorevKU.Sprint7.Project.V4/FormMain.resx
@@ -304,4 +304,10 @@
         D7MeJ57uwYO5EP8DNsYgalFcW8YAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="openFileDialogTask_GKU.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>441, 17</value>
+  </metadata>
+  <metadata name="saveFileDialogTask_GKU.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>667, 17</value>
+  </metadata>
 </root>
