--- a/Tyuiu.GrigorevKU.Sprint7.Project.V4/FormAbout.resx
+++ b/Tyuiu.GrigorevKU.Sprint7.Project.V4/FormAbout.resx
@@ -120,70 +120,70 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxIcon_GKU.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAA3PSURBVHhe7Zy9tdxGEkbp0FMKSoFByFlHPkOgu+fIWFspKAYGoARkbwjyNwG58rR1H6epYqkG
-        A2D6b9Cfcc8T+800Gui61dUA9N79698/ikG8+89fH4yfjf8Zf934w/jF+D77juhL2ijaYYH/3kAMJPBi
-        RD4b32V9iH6kjaI+BLvx0fjVYJXIpIj8nPUl+pE2inpYkH9vfDL+a/xpZCJk8NnfDZVaA0kbxXNYUJcy
-        iv0FQZ4JsAdWmh+yY4g+pI3iHBbMlFE/GOwf9pZRj/iYHUv0IW0Ux7AgLmXUb8aRMmoPEmQgaaN4jAVu
-        rTLqERJkIGmjuI8FrC+jtm7T1kKCDCRtFP/EApUyitu0LcqoLSTIQNJG8TcWoD3KqC0kyEDSxtWxoOxd
-        Rm0hQQaSNq6KBWMpo4487W6NBBlI2rgaFoSI8ZNx9Gl3D7oJYsfizhyr5/vs9yuSNq7ALRgoox69NFgT
-        5ENCZNz73KS5IHaM8hyHlZPx8ZN/L/+yZNp4ZZh0o3cZxXE4Hsf9GnT8t/For9NEEOt3z3McxrX0u2Bp
-        4xVhoo3eZRRBzwqFBHfLFn5n3AvWqoJYf17KPQmC8S9bcqWNV4GJNQg8JrnnbdpSRh3OvnzHKOUXAVxF
-        kNDvkQTBGD5kfa5A2vjq2ISWMmpvlqyBL6PexLCfpzOvfbdk+tPByfH5vvHsc5yfsv5XIG18VWwiS5bs
-        XUYhIsE8xaaWcdzGs7W32QviS5BXxSavVpY8CsfimNOUHzaWs2VUxq7909VJG18Bm7Sjm80aEHQEH0E4
-        zd0dG0vNBFH2T8vuOzxp48zYxNXMkntZoYz6Zv8kvpA2zohN3NAyypiizLBxkCBqPceZTvzZSBtngUm7
-        TV6NLLmXWcsoxKj1HGe6/dOspI2jsYkrWZJA7bW/4DizlVHcgGA8NV6HKeI3KaPo02Cs9H+ZFSltHIVd
-        VEoZsuTqZRQr50uUUdanL33LysaYkfHl/yJL2tgTu4g1s+RemMjTT7tbwVhuY6paRhlVxbf+Sun7aM74
-        3UtLkjb2wC5czSy5F45T7tbMVEYRxDVehyllVJP9E30aR+eM8bxsuZU2tsQuVs0suRcyGQE4WxlFFqb8
-        eTZB8P3WZdTZOePzL7uKpI21sQtUM0vuhYmZtYyq9RyHa9lEfPozapW+L/s3htPGWtiFURll2DhKgiib
-        2Wzce2kqvvXZYs4kiMcuSMmSI8qoJmXGGRjHbTw1nuM0Fd/6bFn6ShC7CGRJAoKL3LOM4lhTPfSysdQs
-        o7z4LcqoHqWvBLGLwASSfbILVBuCjuAjm860v2hRRlUX3/rsXfquK4idPFmIbNnjQpNNZ3va3aqManWb
-        ttbKdoSlBSHLtb7YX8soY5bbtARbrSzcTHzrr+YNgrOsKYidOBPaauUoZRQZb7YyqsZmlu822z9Zn35l
-        67G6b7GeIHbSTAABnF2QZ2AyZyujyMKMp8Yzgabi0+et795l1BZLCkJ5UXMCZiyjam5mm4lv/Y0qo/Ze
-        k26C2LGYM5IEPB1HaeMjOLDBZGcX4whNs+lZGItR65lAM/Gtv5o3CPbi54xj75GyuSB2DF/6ci0YE9fl
-        qfI1bXyEHZQAeiZTkXmaPfQ6g42jZOEazwQIIiaqZRnFtSNQn13Z9nL3RoL9m/FslXVNBLF+S4LYKn1p
-        P/23xdLGR9gBuSBnMhaBx8lcuYxqJr71OaKM4li7VkD7/b0Vraog1t/ROeMcTiWqtPERHMw4IggnwfI3
-        WxlVazPLtWgivvW3J0vWxpdR5wLrW5mrCMJYjDOlL9dtakE4mbcAyvrrhR2/5maWc2KimohvfdZc2fZS
-        fQW0foiV09fHvutL37MJYnpBCnyHE/1HHdsSjnU7Zo3NbOsy6myWfAaSRZMV8Cw2jpoJ4mUEKXDCLOEE
-        ApPSRBbrl3HWLqOqy239kSVHlFHNVsCzMJbbmGomiJcTxFNkoewhY7wJYxzOZLfvMTb6IdhqlFFvNbRx
-        hZcGoekKeAYbR807iBkvLYiHgGQCyR5MIheMbMJkAlkWuJj8LO0EMOUT32Ncz2aeIi19V8+u9Gn0LqO4
-        LmUFnKmMYjzMXcsEcRlBHlEEghaBxTml9/qfxfprnSXvUcqooTdIPDYW4qdW6buHZQRpBedy1TKq+gp4
-        BhtHzTuIR5EgJyGQyOgtxChZclQZNcv+wpdRo2JGgpyAwK3652isv1FZkmPNWEaxgvUqo7aQIAchy1Yr
-        PayvXptND8dpdiPhLDaWUWXUFhJkJ2QyMm2V8sP6KWVUzyzJdW9yI+EsjOM2HhLPjHEhQXbwJkd2Pkex
-        fkaVUW83EoxZbtOWMqrnDYgzSJAdPPXCnH1/xGYTqVmdTr802ALGYvR+jvMMEuQBBPWpcsS+V7JkzzKK
-        bDxbGTXidZhaSJANKE0O392x73COKqO+rJyvUEZtIUHuQMb/lJ3DPezzvcVgjOVpt8qoNkiQOzC5u0sU
-        +ywlBN/J+qoN2bg87Z6pjGL1oozquXK2RoLcYffqwWeNHufEMcrT7tnKqJ7PcXoiQRLIgLsuin2O4GgZ
-        GDOXUb1fhxmBBEn4nI09Yp+jpGh1Lr6MmkIMG8fIlwZHIUESHv6pF/sMwUJZkX3/Gbg2M5ZRjOeqZdQW
-        EiRAADy8tWufIWBqBkspo2Z7abD36zCzIUECu/Yf9hnKjOz7R5iujAIby2pl1BYSJPDw9q79nvKKrJp9
-        fw+c/2xPu0e8DvMKSJAAGX2z9rffE0xnnnmQkd+edmf9jsDGwnywgr3y0+6WSJDAwztY9pmjglC/I8Zs
-        ZdRVnna3RIIEWggCrB5D36y1Y7/yS4OjkCCBVoIU+F7Xu1V2LMarMuocEiTQWpAC14AN8dsdLKPqMw/6
-        u/WrMuo5JEiglyAergfZnX0KwrA/OCQNn719hxKKUk53o+ogQQIjBPGQ6SmD2LNwK5lARxxgNUAgQILS
-        zmf4LN9RCVUXCRIYLYiYCwkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQR
-        HgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhA
-        ggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwS
-        JCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQR
-        HgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhA
-        ggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwS
-        JCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQR
-        HgkSkCDCI0ECEkR4JEhAggiPBAlIEOGRIAEJIjwSJCBBhEeCBCSI8EiQgAQRHgkSkCDCI0ECEkR4JEhA
-        gghPd0FmDy4JIjx9BQE74C9uALMhQYSn+wry3vjB+NPIBjQaCSI8Q1YQAuzX2wBmQ4IIT39BwA7KKvLH
-        bRAzIUGEh+3A+ywOHpE2HsEO/MmYrdSSIAJI3sjxXRYDe0gbj2AHZz/y020w2SBHIEHW5ncDMT5kc3+E
-        tPEMNpiPBrVeNuDeSJD1oIphPknWp/YbGWnjWWxgH4wZNu4SZB2oXIg5EvTpUuoeaeNZbICUWwQeFrPM
-        ZSfUAwlyfahWKKO4UXRqA76HtLEGNmheR/nZGCGKBLku1cuoLdLGmnAitxPixHrd7ZIg18KXUW9i2M9m
-        q4YnbaxJORFOzGA5ZFlkVWkpiwS5BpRRnw3ipvr+Yg9pY0vsRNmnFFkowcgMXIiawkiQ14YESmw8fZv2
-        WdLGnthF8MLw0JEVBmkIXsRheYVMINqA33NRfzP4/sfsWB77jASZC+aR+ftaRs1A2jgau0DlbhjicOsY
-        eYCLF6Gdz/DZ3cswnzUkyHiGl1FbpI0zYhev6qaMyTAkyDi+llFGlw33GdLGFbBJkSD9KWUUpfQ0ZdQW
-        aeMK2ARJkH40fdrdkrRxBZgoQ4K0hTLq7aVBY9oyaou0cQVswiRIGyijuK7dnna3JG1cAZs8CVKXly2j
-        tkgbV4BJNCTI83R5aXAUaeMK2GRKkPNcqozaIm1cAZtYCXIcX0ZdWoxC2rgCNsE8reeefBYI4lt8GXWZ
-        /cUe0sZVuE16FhDiSxk1zUuDo0gbV8EmnlKBQMgCZFXK0+5lyqgt0sZVIAAM7UO+MPVLg6NIG1fCgmHG
-        v+vVk5d4aXAUaeNKWFBwN4vMmQXPVSll1Mu8NDiKtHE1CBJjhVKL27Qqow6QNq6GBUv5vxqvetv35V8a
-        HEXauCoWPEhChr3CnoRzWOJpd0vSxpWxYGI1oTYn62aBNzuXfGlwFGmjeBOFcoSyhIDLAnE2Lv3S4CjS
-        RvEFAu0WcJRds4pSyqhln3a3JG0U32LBV0QhQ1N6jd6jIKuedncgbRT3ISBvgcmq0lMWjlPuRuk2bSfS
-        RrEPC1JkIVjLX4gkgGuWYvRFn8io1WIAaaM4jgVveZaCMP4vRBLgbKAfrTTIwOfYUyAEfdCXpBjGj+/+
-        DwzSCHzY/eTpAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAADc9JREFUeF7t
+        nL213EYSRunQUwpKgUHIWUc+Q6C758hYWykoBgagBGRvCPI3AbnytHUfp6liqQYDYPpv0J9xzxP7zTQa
+        6LrV1QD03v3r3z+KQbz7z18fjJ+N/xl/3fjD+MX4PvuO6EvaKNphgf/eQAwk8GJEPhvfZX2IfqSNoj4E
+        u/HR+NVglcikiPyc9SX6kTaKeliQf298Mv5r/GlkImTw2d8NlVoDSRvFc1hQlzKK/QVBngmwB1aaH7Jj
+        iD6kjeIcFsyUUT8Y7B/2llGP+JgdS/QhbRTHsCAuZdRvxpEyag8SZCBpo3iMBW6tMuoREmQgaaO4jwWs
+        L6O2btPWQoIMJG0U/8QClTKK27QtyqgtJMhA0kbxNxagPcqoLSTIQNLG1bGg7F1GbSFBBpI2rooFYymj
+        jjztbo0EGUjauBoWhIjxk3H0aXcPuglix+LOHKvn++z3K5I2rsAtGCijHr00WBPkQ0Jk3PvcpLkgdozy
+        HIeVk/Hxk38v/7Jk2nhlmHSjdxnFcTgex/0adPy38Wiv00QQ63fPcxzGtfS7YGnjFWGijd5lFEHPCoUE
+        d8sWfmfcC9aqglh/Xso9CYLxL1typY1XgYk1CDwmuedt2lJGHc6+fMco5RcBXEWQ0O+RBMEYPmR9rkDa
+        +OrYhJYyam+WrIEvo97EsJ+nM699t2T608HJ8fm+8exznJ+y/lcgbXxVbCJLluxdRiEiwTzFppZx3Maz
+        tbfZC+JLkFfFJq9WljwKx+KY05QfNpazZVTGrv3T1UkbXwGbtKObzRoQdAQfQTjN3R0bS80EUfZPy+47
+        PGnjzNjE1cySe1mhjPpm/yS+kDbOiE3c0DLKmKLMsHGQIGo9x5lO/NlIG2eBSbtNXo0suZdZyyjEqPUc
+        Z7r906ykjaOxiStZkkDttb/gOLOVUdyAYDw1Xocp4jcpo+jTYKz0f5kVKW0chV1UShmy5OplFCvnS5RR
+        1qcvfcvKxpiR8eX/Ikva2BO7iDWz5F6YyNNPu1vBWG5jqlpGGVXFt/5K6ftozvjdS0uSNvbALlzNLLkX
+        jlPu1sxURhHENV6HKWVUk/0TfRpH54zxvGy5lTa2xC5WzSy5FzIZAThbGUUWpvx5NkHw/dZl1Nk54/Mv
+        u4qkjbWxC1QzS+6FiZm1jKr1HIdr2UR8+jNqlb4v+zeG08Za2IVRGWXYOEqCKJvZbNx7aSq+9dliziSI
+        xy5IyZIjyqgmZcYZGMdtPDWe4zQV3/psWfpKELsIZEkCgovcs4ziWFM99LKx1CyjvPgtyqgepa8EsYvA
+        BJJ9sgtUG4KO4CObzrS/aFFGVRff+uxd+q4riJ08WYhs2eNCk01ne9rdqoxqdZu21sp2hKUFIcu1vthf
+        yyhjltu0BFutLNxMfOuv5g2Cs6wpiJ04E9pq5ShlFBlvtjKqxmaW7zbbP1mffmXrsbpvsZ4gdtJMAAGc
+        XZBnYDJnK6PIwoynxjOBpuLT563v3mXUFksKQnlRcwJmLKNqbmabiW/9jSqj9l6TboLYsZgzkgQ8HUdp
+        4yM4sMFkZxfjCE2z6VkYi1HrmUAz8a2/mjcI9uLnjGPvkbK5IHYMX/pyLRgT1+Wp8jVtfIQdlAB6JlOR
+        eZo99DqDjaNk4RrPBAgiJqplGcW1I1CfXdn2cvdGgv2b8WyVdU0EsX5LgtgqfWk//bfF0sZH2AG5IGcy
+        FoHHyVy5jGomvvU5ooziWLtWQPv9vRWtqiDW39E54xxOJaq08REczDgiCCfB8jdbGVVrM8u1aCK+9bcn
+        S9bGl1HnAutbmasIwliMM6Uv121qQTiZtwDK+uuFHb/mZpZzYqKaiG991lzZ9lJ9BbR+iJXT18e+60vf
+        swliekEKfIcT/Ucd2xKOdTtmjc1s6zLqbJZ8BpJFkxXwLDaOmgniZQQpcMIs4QQCk9JEFuuXcdYuo6rL
+        bf2RJUeUUc1WwLMwltuYaiaIlxPEU2Sh7CFjvAljHM5kt+8xNvoh2GqUUW81tHGFlwah6Qp4BhtHzTuI
+        GS8tiIeAZALJHkwiF4xswmQCWRa4mPws7QQw5RPfY1zPZp4iLX1Xz670afQuo7guZQWcqYxiPMxdywRx
+        GUEeUQSCFoHFOaX3+p/F+mudJe9RyqihN0g8Nhbip1bpu4dlBGkF53LVMqr6CngGG0fNO4hHkSAnIZDI
+        6C3EKFlyVBk1y/7Cl1GjYkaCnIDArfrnaKy/UVmSY81YRrGC9SqjtpAgByHLVis9rK9em00Px2l2I+Es
+        NpZRZdQWEmQnZDIybZXyw/opZVTPLMl1b3Ij4SyM4zYeEs+McSFBdvAmR3Y+R7F+RpVRbzcSjFlu05Yy
+        qucNiDNIkB089cKcfX/EZhOpWZ1OvzTYAsZi9H6O8wwS5AEE9alyxL5XsmTPMopsPFsZNeJ1mFpIkA0o
+        TQ7f3bHvcI4qo76snK9QRm0hQe5Axv+UncM97PO9xWCM5Wm3yqg2SJA7MLm7SxT7LCUE38n6qg3ZuDzt
+        nqmMYvWijOq5crZGgtxh9+rBZ40e58QxytPu2cqons9xeiJBEsiAuy6KfY7gaBkYM5dRvV+HGYEESfic
+        jT1in6OkaHUuvoyaQgwbx8iXBkchQRIe/qkX+wzBQlmRff8ZuDYzllGM56pl1BYSJEAAPLy1a58hYGoG
+        SymjZntpsPfrMLMhQQK79h/2GcqM7PtHmK6MAhvLamXUFhIk8PD2rv2e8oqsmn1/D5z/bE+7R7wO8wpI
+        kAAZfbP2t98TTGeeeZCR3552Z/2OwMbCfLCCvfLT7pZIkMDDO1j2maOCUL8jxmxl1FWedrdEggRaCAKs
+        HkPfrLVjv/JLg6OQIIFWghT4Xte7VXYsxqsy6hwSJNBakALXgA3x2x0so+ozD/q79asy6jkkSKCXIB6u
+        B9mdfQrCsD84JA2fvX2HEopSTnej6iBBAiME8ZDpKYPYs3ArmUBHHGA1QCBAgtLOZ/gs31EJVRcJEhgt
+        iJgLCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgk
+        SECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQki
+        PBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCA
+        BBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgk
+        SECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQki
+        PBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCA
+        BBEeCRKQIMIjQQISRHgkSECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgk
+        SECCCI8ECUgQ4ZEgAQkiPBIkIEGER4IEJIjwSJCABBEeCRKQIMIjQQISRHgkSECCCE93QWYPLgkiPH0F
+        ATvgL24AsyFBhKf7CvLe+MH408gGNBoJIjxDVhAC7NfbAGZDgghPf0HADsoq8sdtEDMhQYSH7cD7LA4e
+        kTYewQ78yZit1JIgAkjeyPFdFgN7SBuPYAdnP/LTbTDZIEcgQdbmdwMxPmRzf4S08Qw2mI8GtV424N5I
+        kPWgimE+Sdan9hsZaeNZbGAfjBk27hJkHahciDkS9OlS6h5p41lsgJRbBB4Ws8xlJ9QDCXJ9qFYoo7hR
+        dGoDvoe0sQY2aF5H+dkYIYoEuS7Vy6gt0saacCK3E+LEet3tkiDXwpdRb2LYz2arhidtrEk5EU7MYDlk
+        WWRVaSmLBLkGlFGfDeKm+v5iD2ljS+xE2acUWSjByAxciJrCSJDXhgRKbDx9m/ZZ0sae2EXwwvDQkRUG
+        aQhexGF5hUwg2oDfc1F/M/j+x+xYHvuMBJkL5pH5+1pGzUDaOBq7QOVuGOJw6xh5gIsXoZ3P8NndyzCf
+        NSTIeIaXUVukjTNiF6/qpozJMCTIOL6WUUaXDfcZ0sYVsEmRIP0pZRSl9DRl1BZp4wrYBEmQfjR92t2S
+        tHEFmChDgrSFMurtpUFj2jJqi7RxBWzCJEgbKKO4rt2edrckbVwBmzwJUpeXLaO2SBtXgEk0JMjzdHlp
+        cBRp4wrYZEqQ81yqjNoibVwBm1gJchxfRl1ajELauAI2wTyt5558FgjiW3wZdZn9xR7SxlW4TXoWEOJL
+        GTXNS4OjSBtXwSaeUoFAyAJkVcrT7mXKqC3SxlUgAAztQ74w9UuDo0gbV8KCYca/69WTl3hpcBRp40pY
+        UHA3i8yZBc9VKWXUy7w0OIq0cTUIEmOFUovbtCqjDpA2roYFS/m/Gq962/flXxocRdq4KhY8SEKGvcKe
+        hHNY4ml3S9LGlbFgYjWhNifrZoE3O5d8aXAUaaN4E4VyhLKEgMsCcTYu/dLgKNJG8QUC7RZwlF2zilLK
+        qGWfdrckbRTfYsFXRCFDU3qN3qMgq552dyBtFPchIG+ByarSUxaOU+5G6TZtJ9JGsQ8LUmQhWMtfiCSA
+        a5Zi9EWfyKjVYgBpoziOBW95loIw/i9EEuBsoB+tNMjA59hTIAR90JekGMaP7/4PDNIIfNj95OkAAAAA
+        SUVORK5CYII=
 </value>
   </data>
-  <data name="textBox1.Text" xml:space="preserve">
+  <data name="textBoxAbout_GKU.Text" xml:space="preserve">
     <value>Разработчик: Григорьев К.Ю.
 Группа ИИПб-23-2
 
